test/error/end_label_task_wrong.sv
// pattern: element "yes" has mismatched end label "no"
module top;
    task yes;
    endtask : no
endmodule
